--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^0.0.3",
 		"@sveltejs/kit": "^1.20.4",
+		"axios": "^1.4.0",
+		"querystring": "^0.2.1",
 		"svelte": "^4.0.0",
 		"vite": "^4.3.6"
 	},
